--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <br>
             Vou dizer tudo em poesia.</p>
     </section>
-    <section>
+    <section class="imagem" id="girasol">
         <p>Não é mais como era antes
             <br>
             É tudo abreviado
@@ -43,7 +43,7 @@
             <br>
             E um coração desenhado.</p>
     </section>
-    <section>
+    <section class="branca">
         <p>Arroba agora não pesa
             <br>
             É parte de um endereço
@@ -75,7 +75,7 @@
             <br>
         </p>
     </section>
-    <section>
+    <section class="imagem" id="livro">
         <p>Tenho saudade das cartas
             <br>
             Escritas com a própria mão
@@ -90,7 +90,7 @@
             <br>
             Nas linhas do coração.</p>
     </section>
-    <section>
+    <section class="branca">
         <p>Agora, escrevo e envio
             <br>
             Chegando na mesma hora
