--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <br>
             Antes que eu caduque
             <br>
-            Vou dizer tudo em poesia.</p>
+            Vou dizer tudo em poesia.
+        </p>
     </section>
     <section class="imagem" id="girasol">
         <p>Não é mais como era antes
@@ -41,7 +42,8 @@
             <br>
             Basta botar uma flor
             <br>
-            E um coração desenhado.</p>
+            E um coração desenhado.
+        </p>
     </section>
     <section class="branca">
         <p>Arroba agora não pesa
@@ -88,7 +90,8 @@
             <br>
             Era texto de verdade
             <br>
-            Nas linhas do coração.</p>
+            Nas linhas do coração.
+        </p>
     </section>
     <section class="branca">
         <p>Agora, escrevo e envio
